update some configurations

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 
 DATABASE_URL="postgresql://postgres:123456@localhost:5432/user-hub-db"
 
+CLIENT_ORIGIN="https://react-user-hub.vercel.app"
+
 PORT=3003
 
 SALT=5
